--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="product-details">
           <h2>SNEAKER COMPANY</h2>
 
-          <P>Fall Limited Edition Sneakers</P>
+          <h3>Fall Limited Edition Sneakers</h3>
 
           <p>These low-profile sneakers are your perfect casual wear companion.Featuring a durable rubber outer
             sole.they'll withstand everything the weather can offer</p>
